set up generic pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<p>Cras aliquam amet adipiscing nibh faucibus suscipit ut Parturient<br />
 							col accumsan est arcu donec sed Eleifend Integer.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">View CV</a></li>
 							</ul>
 						</div>
 					</section>
@@ -52,7 +52,7 @@
 									<h2>GripBeats</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="gripbeats.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -64,7 +64,7 @@
 									<h2>Connect Therapy</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="connecttherapy.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -76,7 +76,7 @@
 									<h2>Design Case Study</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="airplane.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
