Update main page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<p>Cras aliquam amet adipiscing nibh faucibus suscipit ut Parturient<br />
 							col accumsan est arcu donec sed Eleifend Integer.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">View CV</a></li>
+								<li><a href="#one" class="button scrolly">View Portfolio</a></li>
 							</ul>
 						</div>
 					</section>
@@ -46,11 +46,11 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image portfolio"><img src="images/Gripbeats.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>GripBeats</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Accompanying Android app for a wearable electronic musical instrument that uses gestures to play sounds.</p>
 									<ul class="actions">
 										<li><a href="gripbeats.html" class="button">Learn more</a></li>
 									</ul>
@@ -58,11 +58,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image portfolio"><img src="images/CT.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Connect Therapy</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Web app that allowed parents with mental health conditions to connect with mental health professionals via web and chat function.</p>
 									<ul class="actions">
 										<li><a href="connecttherapy.html" class="button">Learn more</a></li>
 									</ul>
@@ -70,11 +70,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/paper.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Design Case Study</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Airplane Booking Case Study</h2>
+									<p>Structured a user-centered approach for developing a prototype.</p>
 									<ul class="actions">
 										<li><a href="airplane.html" class="button">Learn more</a></li>
 									</ul>
@@ -157,7 +157,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="#">szaman_03@hotmail.co.uk</a>
+											<a href="mailto:szaman_03@hotmail.co.uk">szaman_03@hotmail.co.uk</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -166,8 +166,8 @@
 										<li>
 											<h3>Connect with Me</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/keenzman" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/sakeen-zaman" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
