--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Sakeen Zaman</h1>
-							<p>Cras aliquam amet adipiscing nibh faucibus suscipit ut Parturient<br />
-							col accumsan est arcu donec sed Eleifend Integer.</p>
+							<div class="heading">
+								<p class="sub typed"></p>
+							</div>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">View Portfolio</a></li>
 							</ul>
@@ -195,6 +196,9 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/script.js"></script>
+			<script src="assets/js/typed.min.js"></script>
+
 
 	</body>
 </html>
