Update portfolio pages

--- a/connecttherapy.html
+++ b/connecttherapy.html
@@ -33,10 +33,21 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Connect Therapy Web App</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
+							<h3>01: Problem and Process</h3>
+							<p>Design and implement a MVP prototype which allows parents to create a profile, book appointments and chat via video or text with a healthcare professional. There should be separate login portals for normal users(parents), and admin(professionals).</p>
+							<span class="image fit center process"><img src="images/process_ct.png" alt=""/></span>
+							<p>The user stories were used to identify the features that we would need to implement. These were used for the sprints in a kanban board. Each spring lasted 2 weeks.</p>
+							<span class="image fit center process"><img src="images/kanban.png" alt=""/></span>
+							<p>Some examples of these stories are shown below.</p>
+							<span class="image fit center ideas"><img src="images/stories.png" alt=""/></span>
+							<h3>02: Mockup</h3>
+							<p>This is the screen that is shown once a patient logs into the system.<br>
+							<i>(Please note that these mockups are the ones initially designed. Final designs are unavailable.)</i></p>
+							<span class="image fit center main"><img src="images/ct_home.png" alt=""/></span>
+							<span class="image fit center side"><img src="images/book.png" alt=""/></span>
+							<p>A patient can select the date and time for their appointment.</p>
+							<span class="image fit center side"><img src="images/acc.png" alt=""/></span>
+							<p>Booked appointments are shown on this screen. They can view their session notes and or cancel any upcoming appointments. <i>In the final version both the patients and professionals can share files during the live chat.</i></p>
 					</section>
 
 			</div>
