--- a/gripbeats.html
+++ b/gripbeats.html
@@ -32,10 +32,23 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">GripBeats Android App</h1>
-							<span class="image fit center"><img src="images/hero.png" alt=""/></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">GripBeats&reg; Android App</h1>
+							<h3>01: Problem and Process</h3>
+							<p>Design and implement a MVP prototype which allows users to create a profile, and assign different sounds (of various instruments such as drums or guitars) to the physical buttons on the wearable device.</p>
+							<span class="image fit center process"><img src="images/process.png" alt=""/></span>
+							<p>An informal brain-storming session was used to gather the initial requirements as it allowed us to share ideas and adapt them as we went along.</p>
+							<span class="image fit center ideas"><img src="images/ideas.jpg" alt=""/></span>
+							<h3>02: Flows</h3>
+							<p>Sketches were then made to understand possible flows of users using the system.</p>
+							<span class="image fit center"><img src="images/sketch.jpg" alt=""/></span>
+							<p>A user should be able to play different sounds and compose a custom track if they desire. They can assign a different instrument, as only three can be set at any given time, from the 'Assign' tab and carry on composing.
+							</p>
+							<p>They will be able to change the pitch and scales of the sound and also change FX effects from the 'Sound Design' tab.
+							</p>
+							<h3>03: Mockup</h3>
+							<span class="image fit center main"><img src="images/hero.png" alt=""/></span>
+							<span class="image fit center select"><img src="images/select.png" alt=""/></span>
+							<p>The message will only show up if the user taps on any visible area apart from the buttons. e.g the white areas. It will disappear once user taps anywhere on the screen again.</p>
 						</div>
 					</section>
 
