--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<a href="#" class="image portfolio"><img src="images/Gripbeats.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>GripBeats</h2>
+									<h2>GripBeats&reg;</h2>
 									<p>Accompanying Android app for a wearable electronic musical instrument that uses gestures to play sounds.</p>
 									<ul class="actions">
 										<li><a href="gripbeats.html" class="button">Learn more</a></li>
