Finish HCI page

--- a/airplane.html
+++ b/airplane.html
@@ -34,18 +34,23 @@
 						<div class="inner">
 							<h1 class="major">Airplane Booking System</h1>
 							<h3>01: Problem and Process</h3>
-							<p>Design and implement a MVP prototype which allows users to create a profile, and assign different sounds (of various instruments such as drums or guitars) to the physical buttons on the wearable device.</p>
-							<span class="image fit center process"><img src="images/process.png" alt=""/></span>
-							<p>An informal brain-storming session was used to gather the initial requirements as it allowed us to share ideas and adapt them as we went along.</p>
-							<span class="image fit center ideas"><img src="images/ideas.jpg" alt=""/></span>
+							<p>Construct a MVP prototype which allows users to book flights using user-centered approach.</p>
+							<span class="image fit center process flow"><img src="images/flow.png" alt=""/></span>
+							<p>Questionnaires were used to gather the initial requirements to answer questions such as whether more people booked more flights over an app, website, or using other means. There were a total of 22 respondents between the ages of 18-35.</p>
 							<h3>02: Flows</h3>
-							<p>Sketches were then made to understand possible flows of users using the system.</p>
-							<span class="image fit center"><img src="images/sketch.jpg" alt=""/></span>
-							<p>A user should be able to play different sounds and compose a custom track if they desire. They can assign a different instrument, as only three can be set at any given time, from the 'Assign' tab and carry on composing.
-							</p>
-							<p>They will be able to change the pitch and scales of the sound and also change FX effects from the 'Sound Design' tab.
-							</p>
-							<h3>03: Mockup</h3>
+							<p>A quick initial sketch was done to help visualise the steps a user must go through in order to book a flight.</p>
+							<span class="image fit center process flow sketch"><img src="images/steps.png" alt=""/></span>
+							<p>Findings from the questionnaire led to an ordinary flight booking site that functioned similar to existing services. For this reason five individuals, between the ages of 19-22, were informally interviewed to see if any new information could be gleaned. Updated sketches were made to ensure the interviewees understood the user journey. This led to adding extra features such as the ability to see the best times to book flights that updates based on contexual information. <i>(This came about since one candidate jokingly said "students should get student discount on flights!")</i></p>
+							<span class="image fit center process flow"><img src="images/sketch_flow.png" alt=""/></span>
+							<h3>03: User Scenario</h3>
+							<p>Since I was not sure if I could locate a disabled user who might need special access in time, and the questionnaire results would be anonymous, a less able-bodied user who needed wheel-chair access, was turned into a user scenario.</p>
+							<span class="image fit center process flow sketch"><img src="images/user.png" alt=""/></span>
+							<h3>04: Wireframe</h3>
+							<p>Wireframes were then produced which include the changes and additional features such as the ability to manage luggage which takes into account special items by weight.</p>
+							<span class="image fit center process wireflow"><img src="images/wireframe_flights.png" alt=""/></span>
+							<h3>03: Usability Evaluation</h3>
+							<p>Semi-structured interviews were conducted to assess final designs. Three of the original five were the candidates. This was done intentionally to see if the updated wireframes matched their expectations. i.e. the participants were already familiar with the system. The outcomes of the usuability goals have been summarised in the table below.</p>
+							<span class="image fit center process flow outcome"><img src="images/outcomes.png" alt=""/></span>
 						</div>
 					</section>
 
