--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image portfolio"><img src="images/Gripbeats.png" alt="" data-position="center center" /></a>
+							<a href="gripbeats.html" class="image portfolio"><img src="images/Gripbeats.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>GripBeats&reg;</h2>
@@ -59,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image portfolio"><img src="images/CT.png" alt="" data-position="top center" /></a>
+							<a href="connecttherapy.html" class="image portfolio"><img src="images/CT.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Connect Therapy</h2>
@@ -71,13 +71,14 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/paper.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="airplane.html" class="image"><img src="images/paper.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Airplane Booking Case Study</h2>
 									<p>Structured a user-centered approach for developing a prototype.</p>
 									<ul class="actions">
 										<li><a href="airplane.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/keenzman/Airline-Booking-System" class="button">Read Full Report</a></li>
 									</ul>
 								</div>
 							</div>
