--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<h2>Get in touch!</h2>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#" data-netlify="true">
+									<form name="contact" method="post" action="#" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
