--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<h2>Get in touch!</h2>
 							<div class="split style1">
 								<section>
-									<form name="contact" method="post" action="#" data-netlify="true">
+									<form name="contact" method="post" action="assets/php/contactform.php" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -151,7 +151,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" type="submit" class="button submit">Send Message</a></li>
+											<li><a href="" name="submit" type="submit" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
