--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" name="submit" type="submit" class="button submit">Send Message</a></li>
+											<li><a href="" type="submit" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
