--- a/gripbeats.html
+++ b/gripbeats.html
@@ -37,7 +37,7 @@
 							<p>Design and implement a MVP prototype which allows users to create a profile, and assign different sounds (of various instruments such as drums or guitars) to the physical buttons on the wearable device.</p>
 							<span class="image fit center process"><img src="images/process.png" alt=""/></span>
 							<p>An informal brain-storming session was used to gather the initial requirements as it allowed us to share ideas and adapt them as we went along.</p>
-							<span class="image fit center ideas"><img src="images/ideas.jpg" alt=""/></span>
+							<span class="image fit center ideas"><img src="images/req.png" alt=""/></span>
 							<h3>02: Flows</h3>
 							<p>Sketches were then made to understand possible flows of users using the system.</p>
 							<span class="image fit center"><img src="images/sketch.jpg" alt=""/></span>
