--- a/airplane.html
+++ b/airplane.html
@@ -41,13 +41,13 @@
 							<p>A quick initial sketch was done to help visualise the steps a user must go through in order to book a flight.</p>
 							<span class="image fit center process flow sketch"><img src="images/steps.png" alt=""/></span>
 							<p>Findings from the questionnaire led to an ordinary flight booking site that functioned similar to existing services. For this reason five individuals, between the ages of 19-22, were informally interviewed to see if any new information could be gleaned. Updated sketches were made to ensure the interviewees understood the user journey. This led to adding extra features such as the ability to see the best times to book flights that updates based on contexual information. <i>(This came about since one candidate jokingly said "students should get student discount on flights!")</i></p>
-							<span class="image fit center process flow"><img src="images/sketch_flow.png" alt=""/></span>
+							<span class="image fit center process flow art"><img src="images/sketch_art.png" alt=""/></span>
 							<h3>03: User Scenario</h3>
 							<p>Since I was not sure if I could locate a disabled user who might need special access in time, and the questionnaire results would be anonymous, a less able-bodied user who needed wheel-chair access, was turned into a user scenario.</p>
 							<span class="image fit center process flow sketch"><img src="images/user.png" alt=""/></span>
 							<h3>04: Wireframe</h3>
 							<p>Wireframes were then produced which include the changes and additional features such as the ability to manage luggage which takes into account special items by weight.</p>
-							<span class="image fit center process wireflow"><img src="images/wireframe_flights.png" alt=""/></span>
+							<span class="image fit center process wireflow art"><img src="images/wireframe_art.png" alt=""/></span>
 							<h3>03: Usability Evaluation</h3>
 							<p>Semi-structured interviews were conducted to assess final designs. Three of the original five were the candidates. This was done intentionally to see if the updated wireframes matched their expectations. i.e. the participants were already familiar with the system. The outcomes of the usuability goals have been summarised in the table below.</p>
 							<span class="image fit center process flow outcome"><img src="images/outcomes.png" alt=""/></span>
