--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 									<p>Web app that allowed parents with mental health conditions to connect with mental health professionals via web and chat function.</p>
 									<ul class="actions">
 										<li><a href="connecttherapy.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/keenzman/Connect-Therapy" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
