--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 											<ul class="icons">
 												<li><a href="https://github.com/keenzman" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/sakeen-zaman" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.behance.net/sakeenzaman" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
 											</ul>
 										</li>
 									</ul>
